--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Store Monitor Dashboard</title>
+    <title>Erix Clean Hub - Dashboard</title>
     <style>
         * {
             margin: 0;
@@ -21,7 +21,7 @@
         .header {
             background: rgba(255, 255, 255, 0.1);
             backdrop-filter: blur(10px);
-            padding: 20px 0;
+            padding: 40px 20px;
             text-align: center;
             color: white;
             box-shadow: 0 2px 20px rgba(0,0,0,0.1);
@@ -36,6 +36,86 @@
         .header p {
             font-size: 1.1rem;
             opacity: 0.9;
+        }
+
+        .nav-section {
+            background: white;
+            border-radius: 15px;
+            padding: 30px;
+            box-shadow: 0 5px 25px rgba(0,0,0,0.1);
+            margin-bottom: 30px;
+        }
+
+        .nav-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 20px;
+        }
+
+        .nav-card {
+            background: linear-gradient(135deg, #f8f9ff 0%, #f0f8ff 100%);
+            padding: 20px;
+            border-radius: 10px;
+            border: 2px solid rgba(102, 126, 234, 0.1);
+            transition: all 0.3s ease;
+            text-decoration: none;
+            color: inherit;
+            display: block;
+        }
+
+        .nav-card:hover {
+            transform: translateY(-5px);
+            border-color: #667eea;
+            box-shadow: 0 8px 25px rgba(102, 126, 234, 0.2);
+            text-decoration: none;
+            color: inherit;
+        }
+
+        .nav-card-header {
+            display: flex;
+            align-items: center;
+            gap: 15px;
+            margin-bottom: 10px;
+        }
+
+        .nav-card-icon {
+            font-size: 2.5rem;
+        }
+
+        .nav-card-title {
+            font-size: 1.3rem;
+            font-weight: 600;
+            color: #333;
+        }
+
+        .nav-card-desc {
+            color: #666;
+            font-size: 0.95rem;
+            line-height: 1.4;
+        }
+
+        .nav-card-status {
+            display: inline-block;
+            padding: 4px 8px;
+            border-radius: 10px;
+            font-size: 0.75rem;
+            font-weight: 500;
+            margin-top: 8px;
+        }
+
+        .status-live {
+            background: #d4edda;
+            color: #155724;
+        }
+
+        .status-internal {
+            background: #fff3cd;
+            color: #856404;
+        }
+
+        .status-new {
+            background: #cce5ff;
+            color: #004085;
         }
 
         .container {
@@ -112,7 +192,7 @@
 
         .item-header {
             display: flex;
-            justify-content: between;
+            justify-content: space-between;
             align-items: center;
             margin-bottom: 10px;
         }
@@ -184,6 +264,7 @@
             border-radius: 15px;
             padding: 30px;
             box-shadow: 0 5px 25px rgba(0,0,0,0.1);
+            margin-bottom: 60px;
         }
 
         .notification {
@@ -341,42 +422,77 @@
 </head>
 <body>
     <div class="header">
-        <h1>🎯 Store Monitor Dashboard</h1>
-        <p>Real-time item availability monitoring</p>
+        <h1>Erix Clean Hub</h1>
+        <p>Professional cleaning services & business management platform</p>
     </div>
 
     <div class="container">
-        <!-- Stats Section -->
-        <div class="stats-grid">
-            <div class="stat-card">
-                <div class="icon">🧽</div>
-                <h3><a href="/cleaning" style="text-decoration: none; color: inherit;">Erix Clean</a></h3>
-                <p>Cleaning Services</p>
-            </div>
-            <div class="stat-card">
-                <div class="icon">🎨</div>
-                <h3><a href="/ai-generator" style="text-decoration: none; color: inherit;">AI Generator</a></h3>
-                <p>Create Images</p>
-            </div>
-            <div class="stat-card">
-                <div class="icon">📦</div>
-                <h3 id="total-items">0</h3>
-                <p>Total Items</p>
-            </div>
-            <div class="stat-card">
-                <div class="icon">✅</div>
-                <h3 id="available-items">0</h3>
-                <p>Available Now</p>
-            </div>
-            <div class="stat-card">
-                <div class="icon">👥</div>
-                <h3 id="total-subscribers">0</h3>
-                <p>Total Subscribers</p>
-            </div>
-            <div class="stat-card">
-                <div class="icon">🔔</div>
-                <h3 id="notifications-sent">0</h3>
-                <p>Notifications Sent</p>
+        <!-- Navigation Section -->
+        <div class="nav-section">
+            <div class="section-title">🌟 All Services & Tools</div>
+            <div class="nav-grid">
+                <a href="/cleaning" class="nav-card">
+                    <div class="nav-card-header">
+                        <div class="nav-card-icon">🧹</div>
+                        <div class="nav-card-title">Main Cleaning Service</div>
+                    </div>
+                    <div class="nav-card-desc">Professional cleaning services with gallery, pricing, and contact forms</div>
+                    <span class="nav-card-status status-live">LIVE</span>
+                </a>
+
+                <a href="/services" class="nav-card">
+                    <div class="nav-card-header">
+                        <div class="nav-card-icon">💫</div>
+                        <div class="nav-card-title">Modern Services</div>
+                    </div>
+                    <div class="nav-card-desc">Interactive calculator, before/after gallery, and testimonials</div>
+                    <span class="nav-card-status status-new">NEW</span>
+                </a>
+
+                <a href="/schedule" class="nav-card">
+                    <div class="nav-card-header">
+                        <div class="nav-card-icon">📅</div>
+                        <div class="nav-card-title">Schedule Manager</div>
+                    </div>
+                    <div class="nav-card-desc">Internal schedule management for cleaners, clients, and appointments</div>
+                    <span class="nav-card-status status-internal">INTERNAL</span>
+                </a>
+
+                <a href="/ai-generator" class="nav-card">
+                    <div class="nav-card-header">
+                        <div class="nav-card-icon">🤖</div>
+                        <div class="nav-card-title">AI Image Generator</div>
+                    </div>
+                    <div class="nav-card-desc">DALL-E 3 integration for professional cleaning images</div>
+                    <span class="nav-card-status status-live">LIVE</span>
+                </a>
+
+                <a href="/console" class="nav-card">
+                    <div class="nav-card-header">
+                        <div class="nav-card-icon">💻</div>
+                        <div class="nav-card-title">Live Console</div>
+                    </div>
+                    <div class="nav-card-desc">Real-time server logs and notification monitoring</div>
+                    <span class="nav-card-status status-internal">INTERNAL</span>
+                </a>
+
+                <a href="/status" class="nav-card">
+                    <div class="nav-card-header">
+                        <div class="nav-card-icon">📊</div>
+                        <div class="nav-card-title">Quick Status</div>
+                    </div>
+                    <div class="nav-card-desc">System status and health monitoring dashboard</div>
+                    <span class="nav-card-status status-live">LIVE</span>
+                </a>
+
+                <a href="/admin" class="nav-card">
+                    <div class="nav-card-header">
+                        <div class="nav-card-icon">⚙️</div>
+                        <div class="nav-card-title">Admin Dashboard</div>
+                    </div>
+                    <div class="nav-card-desc">Administrative controls and system management</div>
+                    <span class="nav-card-status status-internal">INTERNAL</span>
+                </a>
             </div>
         </div>
 
@@ -404,6 +520,48 @@
             <div class="section-title">🔔 Recent Notifications</div>
             <div id="notifications-container">
                 <!-- Notifications will be loaded here -->
+            </div>
+        </div>
+
+        <!-- Quick API Access -->
+        <div class="nav-section">
+            <div class="section-title">🔗 Quick API Access</div>
+            <div class="nav-grid">
+                <a href="/api" class="nav-card">
+                    <div class="nav-card-header">
+                        <div class="nav-card-icon">📋</div>
+                        <div class="nav-card-title">API Information</div>
+                    </div>
+                    <div class="nav-card-desc">Complete API documentation and endpoint overview</div>
+                    <span class="nav-card-status status-live">LIVE</span>
+                </a>
+
+                <a href="/health" class="nav-card">
+                    <div class="nav-card-header">
+                        <div class="nav-card-icon">❤️</div>
+                        <div class="nav-card-title">Health Check</div>
+                    </div>
+                    <div class="nav-card-desc">System health status and statistics</div>
+                    <span class="nav-card-status status-live">LIVE</span>
+                </a>
+
+                <a href="/api/data/quotes" class="nav-card">
+                    <div class="nav-card-header">
+                        <div class="nav-card-icon">📄</div>
+                        <div class="nav-card-title">Quote Requests</div>
+                    </div>
+                    <div class="nav-card-desc">View all cleaning service quote requests</div>
+                    <span class="nav-card-status status-internal">INTERNAL</span>
+                </a>
+
+                <a href="/api/data/stats" class="nav-card">
+                    <div class="nav-card-header">
+                        <div class="nav-card-icon">📈</div>
+                        <div class="nav-card-title">System Stats</div>
+                    </div>
+                    <div class="nav-card-desc">JSON data for quotes, contacts, and system metrics</div>
+                    <span class="nav-card-status status-internal">INTERNAL</span>
+                </a>
             </div>
         </div>
     </div>
